--- a/public/display.html
+++ b/public/display.html
@@ -597,12 +597,17 @@
             }).join('');
         }
 
-        // Timer functionality
+        // Timer functionality - TIMESTAMP-BASED
         let timerInterval;
-        let timeRemaining = 0;
-        let isTimerActive = false;
+        let timerEndTime = 0; // Timestamp when timer should end
+        let isTimerInitialized = false;
 
         async function initTimer() {
+            if (isTimerInitialized && timerInterval) {
+                console.log('Display timer already initialized, skipping...');
+                return;
+            }
+
             try {
                 const config = await getGameConfig();
 
@@ -610,15 +615,16 @@
                 if (config.timerVisibility === 'show' && config.timerDuration > 0 && !config.votingLocked) {
                     document.getElementById('timerContainer').style.display = 'block';
 
-                    // Calculate time remaining based on start time
+                    // ALWAYS use timerStartTime if available
                     if (config.timerStartTime) {
-                        const elapsed = Math.floor((Date.now() - config.timerStartTime) / 1000);
-                        timeRemaining = Math.max(0, config.timerDuration - elapsed);
+                        timerEndTime = config.timerStartTime + (config.timerDuration * 1000);
+                        console.log('✓ Display timer synced to start time:', new Date(config.timerStartTime));
                     } else {
-                        timeRemaining = config.timerDuration;
+                        timerEndTime = Date.now() + (config.timerDuration * 1000);
+                        console.log('⚠ Display timer using fallback');
                     }
 
-                    isTimerActive = true;
+                    isTimerInitialized = true;
                     startTimer();
                 } else {
                     document.getElementById('timerContainer').style.display = 'none';
@@ -632,9 +638,12 @@
         function startTimer() {
             updateTimerDisplay();
 
+            // Use 100ms interval for smooth updates (timestamp-based calculation)
             timerInterval = setInterval(async () => {
+                const now = Date.now();
+                const timeRemaining = Math.max(0, Math.ceil((timerEndTime - now) / 1000));
+
                 if (timeRemaining > 0) {
-                    timeRemaining--;
                     updateTimerDisplay();
                 } else {
                     // Timer reached 0:00
@@ -648,10 +657,13 @@
                         console.error('Error updating voting lock:', error);
                     }
                 }
-            }, 1000);
+            }, 100);
         }
 
         function updateTimerDisplay() {
+            const now = Date.now();
+            const timeRemaining = Math.max(0, Math.ceil((timerEndTime - now) / 1000));
+
             const minutes = Math.floor(timeRemaining / 60);
             const seconds = timeRemaining % 60;
             const display = `${minutes}:${seconds.toString().padStart(2, '0')}`;
@@ -687,26 +699,41 @@
         }
 
         // Listen for voting lock state changes
+        let previousLockState = true; // Track previous lock state globally
+
         async function watchVotingLockState() {
             try {
+                console.log('Display watchVotingLockState called');
                 // Initial check
                 const config = await getGameConfig();
-                let previousLockState = config.votingLocked !== undefined ? config.votingLocked : true;
+                console.log('Display got config:', config);
+                previousLockState = config.votingLocked !== undefined ? config.votingLocked : true;
+                console.log('Display initial lock state:', previousLockState);
 
                 if (previousLockState) {
+                    console.log('Locking display (initial)');
                     lockDisplay();
                 } else {
+                    console.log('Unlocking display and initializing timer (initial)');
                     unlockDisplay();
                     initTimer();
                 }
+            } catch (error) {
+                console.error('Error in initial check:', error);
+            }
 
-                // Poll for changes every 2 seconds
-                setInterval(async () => {
+            // Poll for changes every 500ms - always run this
+            console.log('Display starting polling interval...');
+            setInterval(async () => {
+                try {
                     const updatedConfig = await getGameConfig();
                     const isLocked = updatedConfig.votingLocked !== undefined ? updatedConfig.votingLocked : true;
 
+                    console.log('Display poll check - Previous:', previousLockState, 'Current:', isLocked);
+
                     // If voting just unlocked (went from locked to unlocked), refresh the page
-                    if (previousLockState && !isLocked) {
+                    if (previousLockState === true && isLocked === false) {
+                        console.log('🔥 DISPLAY UNLOCKED! Refreshing page now...');
                         window.location.reload();
                         return;
                     }
@@ -721,10 +748,10 @@
                         unlockDisplay();
                         initTimer();
                     }
-                }, 2000);
-            } catch (error) {
-                console.error('Error watching voting lock state:', error);
-            }
+                } catch (error) {
+                    console.error('Error in polling interval:', error);
+                }
+            }, 500);
         }
 
         // Check if already authenticated
