Center VOTING LOCKED overlay text in display page
- Add text-align: center to h1 and p elements
- Add width: 100% to ensure proper centering
- Remove default margins from h1 for consistent spacing

--- a/public/display.html
+++ b/public/display.html
@@ -312,6 +312,10 @@
             -webkit-text-fill-color: transparent;
             background-clip: text;
             animation: pulse 2s ease-in-out infinite;
+            text-align: center;
+            width: 100%;
+            margin: 0;
+            padding: 0;
         }
 
         .display-locked p {
@@ -319,6 +323,8 @@
             color: var(--white);
             opacity: 0.8;
             margin-top: 20px;
+            text-align: center;
+            width: 100%;
         }
 
 
