--- a/public/admin.html
+++ b/public/admin.html
@@ -107,7 +107,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            min-height: 150px;
+            height: 54px;
             margin-top: 10px;
             background: rgba(0, 0, 0, 0.5);
             border: 2px dashed var(--primary-blue);
@@ -124,7 +124,7 @@
 
         .logo-preview-clickable img {
             max-width: 100%;
-            max-height: 150px;
+            height: 50px;
             object-fit: contain;
         }
 
