--- a/public/display.html
+++ b/public/display.html
@@ -450,6 +450,9 @@
     <script src="/js/auth.js"></script>
     <script src="/js/data.js"></script>
     <script>
+        // Check authentication
+        checkAuthentication('display');
+
         let currentUnit = 'lbs'; // Will be loaded from config
 
         // Passcode input formatting
